discussion/kv_engine/173474/173474_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Add a time limit to range scan continue

Add a time limit to the range scan continue so that the scan runs
for a specified amount of time.

As per the design, the timeout only applies to the actual running of
the scan and not for any time spent waiting (e.g. waiting for a
thread).

Change-Id: I72471cf03823bb535a32e8c22f712ba7e8777312

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-19 15:44:34.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-19 17:01:39.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45361/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\range_scan_test.cc(277): error C2664: "void RangeScanTest::testRangeScan(const std::unordered_set<StoredDocKey,std::hash<_Kty>,std::equal_to<_Kty>,std::allocator<_Kty>> &,CollectionID,cb::rangescan::KeyView,cb::rangescan::KeyView,size_t,std::chrono::milliseconds,size_t)": cannot convert argument 3 from "const char [5]" to "cb::rangescan::KeyView" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45361/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16744/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:279:19: error: no viable conversion from "const char [5]" to "cb::rangescan::KeyView" [clang-diagnostic-error]
                  "user",
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:26:7: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from "const char [5]" to "const cb::rangescan::KeyView &" for 1st argument
class KeyView {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:26:7: note: candidate constructor (the implicit move constructor) not viable: no known conversion from "const char [5]" to "cb::rangescan::KeyView &&" for 1st argument
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:38:5: note: candidate constructor not viable: no known conversion from "const char [5]" to "std::string_view" (aka "basic_string_view<char>") for 1st argument
    KeyView(std::string_view key) : key{key} {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:223:32: note: passing argument to parameter "start" here
        cb::rangescan::KeyView start,
                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:290:19: error: no viable conversion from "const char [5]" to "cb::rangescan::KeyView" [clang-diagnostic-error]
                  "user",
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:26:7: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from "const char [5]" to "const cb::rangescan::KeyView &" for 1st argument
class KeyView {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:26:7: note: candidate constructor (the implicit move constructor) not viable: no known conversion from "const char [5]" to "cb::rangescan::KeyView &&" for 1st argument
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:38:5: note: candidate constructor not viable: no known conversion from "const char [5]" to "std::string_view" (aka "basic_string_view<char>") for 1st argument
    KeyView(std::string_view key) : key{key} {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:223:32: note: passing argument to parameter "start" here
        cb::rangescan::KeyView start,
                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:308:19: error: no viable conversion from "const char [5]" to "cb::rangescan::KeyView" [clang-diagnostic-error]
                  "user",
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:26:7: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from "const char [5]" to "const cb::rangescan::KeyView &" for 1st argument
class KeyView {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:26:7: note: candidate constructor (the implicit move constructor) not viable: no known conversion from "const char [5]" to "cb::rangescan::KeyView &&" for 1st argument
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:38:5: note: candidate constructor not viable: no known conversion from "const char [5]" to "std::string_view" (aka "basic_string_view<char>") for 1st argument
    KeyView(std::string_view key) : key{key} {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:223:32: note: passing argument to parameter "start" here
        cb::rangescan::KeyView start,
                               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16744/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:279:19:
error: no viable conversion from "const char [5]" to "cb::rangescan::KeyView" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16744/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18522/ : FAILURE

Compile error at [2022-04-19T16:06:37.909Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:279:19:
error: cannot convert ?const char [5]? to ?cb::rangescan::KeyView?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18522/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26927/ : FAILURE

Compile error at [2022-04-19T16:10:30.955Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:279:19:
error: no viable conversion from "const char [5]" to "cb::rangescan::KeyView"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26927/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17618/ : FAILURE

Compile error at [2022-04-19T15:53:17.609Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:279:19:
error: no viable conversion from "const char [5]" to "cb::rangescan::KeyView"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17618/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6398/ : FAILURE

Compile error at [2022-04-19T15:51:19.915Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:279:19:
error: no viable conversion from "const char [5]" to "cb::rangescan::KeyView"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6398/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18859/ : FAILURE

Compile error at [2022-04-19T15:55:56.679Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:279:19:
error: cannot convert ?const char [5]? to ?cb::rangescan::KeyView?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18859/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6461/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19561/ : FAILURE

Compile error at [2022-04-19T16:10:27.567Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:279:19:
error: no viable conversion from "const char [5]" to "cb::rangescan::KeyView"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19561/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38103/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15677/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
